[package]
name = "rusty-paste"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.5.23", features = ["derive"] }
nanoid = "0.4.0"
serde = { version = "1.0.215", features = ["derive"] }
tiny_http = "0.12.0"
toml = "0.8.19"
ureq = "2.12.1"
