[package]
name = "rusty-paste"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/bin/main.rs"

[[bin]]
name = "client"
path = "src/client/bin/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
humphrey_json = "0.2.2"
jasondb = "0.2.7"
nanoid = "0.4.0"
serde = { version = "1.0.215", features = ["derive"] }
simplestcrypt = "0.1.4"
tiny_http = "0.12.0"
toml = "0.8.19"
ureq = "2.12.1"
